--- a/src/HN.Bangumi.Uwp.18362/Styles/ItemsViews/DefaultGridViewStyle.xaml
+++ b/src/HN.Bangumi.Uwp.18362/Styles/ItemsViews/DefaultGridViewStyle.xaml
@@ -4,6 +4,10 @@
         <Setter Property="ItemContainerStyle">
             <Setter.Value>
                 <Style TargetType="SelectorItem">
+                    <Setter Property="HorizontalContentAlignment"
+                            Value="Stretch" />
+                    <Setter Property="Margin"
+                            Value="0,0,12,12" />
                     <Setter Property="VerticalContentAlignment"
                             Value="Stretch" />
                 </Style>
