--- a/src/HN.Bangumi.Uwp.18362/App.xaml
+++ b/src/HN.Bangumi.Uwp.18362/App.xaml
@@ -8,6 +8,8 @@
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
                 <ResourceDictionary Source="/Styles/AppButtonStyles.xaml" />
+                <ResourceDictionary Source="/Styles/AppImageStyles.xaml" />
+                <ResourceDictionary Source="/Styles/AppItemsViewStyles.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <viewModels:ViewModelLocator x:Key="Locator" />
             <converters:BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
