--- a/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ProgressView.xaml
@@ -1,7 +1,6 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.ProgressView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-      xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
       xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:core="using:Microsoft.Xaml.Interactions.Core"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
@@ -11,10 +10,10 @@
       NavigationCacheMode="Enabled"
       mc:Ignorable="d">
     <Grid>
-        <GridView Loaded="SubjectGridView_Loaded"
-                  IsItemClickEnabled="True"
+        <GridView IsItemClickEnabled="True"
                   ItemClick="SubjectGridView_ItemClick"
-                  ItemsSource="{Binding Path=Collection}">
+                  ItemsSource="{Binding Path=Collection}"
+                  Loaded="SubjectGridView_Loaded">
             <interactivity:Interaction.Behaviors>
                 <core:EventTriggerBehavior EventName="ItemClick">
                     <core:InvokeCommandAction Command="{Binding Path=ItemClickCommand}"
