--- a/src/HN.Bangumi.Uwp.18362/Controls/EpProgressControl.xaml
+++ b/src/HN.Bangumi.Uwp.18362/Controls/EpProgressControl.xaml
@@ -6,6 +6,8 @@
                 Value="#333333" />
         <Setter Property="Background"
                 Value="LightGray" />
+        <Setter Property="Foreground"
+                Value="{ThemeResource SystemAccentColor}" />
         <Setter Property="FrontTextBrush"
                 Value="White" />
         <Setter Property="Padding"
