--- a/src/HN.Bangumi.Uwp.17763/Views/ShellView.xaml
+++ b/src/HN.Bangumi.Uwp.17763/Views/ShellView.xaml
@@ -91,7 +91,8 @@
                                 VerticalAlignment="Center"
                                 Orientation="Vertical">
                         <Image Width="200"
-                               Height="200" Margin="-60"
+                               Height="200"
+                               Margin="-60"
                                Source="/Assets/LargeTile.png"
                                Stretch="Fill" />
                         <TextBlock Text="Welcome to Bangumi!"
