--- a/src/HN.Bangumi.Uwp.18362/App.xaml
+++ b/src/HN.Bangumi.Uwp.18362/App.xaml
@@ -16,9 +16,18 @@
             <converters:BooleanToVisibilityConverter x:Key="InversedBooleanToVisibilityConverter"
                                                      IsInversed="True" />
             <converters:MultiplyConverter x:Key="MultiplyConverter" />
+            <localConverters:CharacterNameConverter x:Key="CharacterNameConverter" />
             <localConverters:FileSizeToStringConverter x:Key="FileSizeToStringConverter" />
-            <localConverters:IsNullToVisibilityConverter IsInversed="True" x:Key="InversedIsNullToVisibilityConverter" />
+            <localConverters:IsEmptyCollectionToVisibilityConverter x:Key="InversedIsEmptyCollectionToVisibilityConverter"
+                                                                    IsInversed="True" />
+            <localConverters:IsEqualsToVisibilityConverter x:Key="InversedIsEqualsToVisibilityConverter"
+                                                           IsInversed="True" />
+            <localConverters:IsNullOrEmptyStringConverter x:Key="InversedIsNullOrEmptyStringConverter"
+                                                          IsInversed="True" />
+            <localConverters:IsNullToVisibilityConverter x:Key="InversedIsNullToVisibilityConverter"
+                                                         IsInversed="True" />
             <localConverters:ItemClickEventArgsConverter x:Key="ItemClickEventArgsConverter" />
+            <localConverters:StaffNameConverter x:Key="StaffNameConverter" />
             <localConverters:SubjectNameConverter x:Key="SubjectNameConverter" />
         </ResourceDictionary>
     </Application.Resources>
