--- a/src/HN.Bangumi.Uwp.18362/Styles/AppButtonStyles.xaml
+++ b/src/HN.Bangumi.Uwp.18362/Styles/AppButtonStyles.xaml
@@ -1,5 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation">
     <ResourceDictionary.MergedDictionaries>
+        <ResourceDictionary Source="/Styles/Buttons/EpItemButtonStyle.xaml" />
+        <ResourceDictionary Source="/Styles/Buttons/EpItemCancelButtonStyle.xaml" />
         <ResourceDictionary Source="/Styles/Buttons/RefreshButtonStyle.xaml" />
     </ResourceDictionary.MergedDictionaries>
 </ResourceDictionary>
