--- a/src/HN.Bangumi.Uwp.18362/Views/ShellView.xaml
+++ b/src/HN.Bangumi.Uwp.18362/Views/ShellView.xaml
@@ -1,10 +1,12 @@
 ﻿<Page x:Class="HN.Bangumi.Uwp.Views.ShellView"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+      xmlns:controls="using:HN.Bangumi.Uwp.Controls"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+      xmlns:media="using:HN.Media"
       xmlns:uwp="using:FontAwesome5.UWP"
-      Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+      Background="#E3E3E3"
       DataContext="{Binding Source={StaticResource Locator}, Path=Shell}"
       mc:Ignorable="d">
     <Grid>
@@ -16,6 +18,28 @@
                                 QueryIcon="Find"
                                 QuerySubmitted="AutoSuggestBox_QuerySubmitted" />
             </NavigationView.AutoSuggestBox>
+            <NavigationView.PaneCustomContent>
+                <Grid Height="40"
+                      Visibility="{Binding Path=IsSignIn, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="*" />
+                    </Grid.ColumnDefinitions>
+                    <Grid Grid.Column="0"
+                          Width="48">
+                        <Ellipse Width="28"
+                                 Height="28">
+                            <Ellipse.Fill>
+                                <media:ImageBrushEx ImageSource="{Binding Path=User.Avatar.Small, FallbackValue='/Assets/Images/avatar.jpg'}"
+                                                    RetryCount="5" />
+                            </Ellipse.Fill>
+                        </Ellipse>
+                    </Grid>
+                    <TextBlock Grid.Column="1"
+                               VerticalAlignment="Center"
+                               Text="{Binding Path=User.Nickname, FallbackValue='Loading...'}" />
+                </Grid>
+            </NavigationView.PaneCustomContent>
             <NavigationView.MenuItems>
                 <NavigationViewItem Content="登录"
                                     SelectsOnInvoked="False"
@@ -61,5 +85,6 @@
                 </Grid>
             </Frame>
         </NavigationView>
+        <controls:ToastPromptHost />
     </Grid>
 </Page>
